# austin

./: .gitignore  .travis.yml  AUTHORS  CONTRIBUTING.md  ChangeLog  Dockerfile  ISSUE_TEMPLATE.md  MANIFEST.in  Makefile.am  PULL_REQUEST_TEMPLATE.md  Pipfile  README.md  configure.ac  setup.py
.github/: FUNDING.yml
.github/workflows/: benchmarks.yml  build_arch.yml  checks.yml  dev_release.yml  dev_release_arch.yml  docker.yml  pre_release.yml  pre_release_arch.yml  release.yml  release_arch.yml  tests.yml
austin/: __init__.py  austin.py  main.py  stats.py  tui.py  web.py  widget.py
austin/format/: speedscope.py
austin/html/: __init__.py  duration.js  flamegraph.js  index.html  main.css  ui.html  websocket.js
austin_tui/: austin.py  main.py  stats.py  tui.py
choco/: austin.nuspec
choco/tools/: chocolateyinstall.ps1
debian/: austin.1  austin.manpages  changelog  control  copyright  install  rules  watch  watch.ex
debian/patches/: 962001  series
debian/tests/: control
debian/upstream/: metadata
doc/: examples.troff  gen.sh  genman.sh
include/: libaustin.h
scripts/: benchmark.py  build-wheel.py  build_arch.sh  cog.sh  common.py  requirements-bm.txt  requirements-val.txt  utils.py  validation.py
snap/: snapcraft.yaml
src/: Makefile.am  argparse.c  argparse.h  austin  austin.1  austin.c  austin.h  bin.h  cache.c  cache.h  code.h  dict.c  dict.h  error.c  error.h  events.h  frame.h  heap.h  hints.h  logging.c  logging.h  mem.c  mem.h  mojo.h  msg.h  platform.c  platform.h  py_code.c  py_code.h  py_frame.c  py_frame.h  py_proc.c  py_proc.h  py_proc_list.c  py_proc_list.h  py_string.h  py_thread.c  py_thread.h  python.h  python36.h  (+9 more)
src/linux/: addr2line.h  analyze_elf.h  common.h  futils.h  py_proc.c  py_proc.h  py_proc_elf.c  py_thread.h  vm-range-tree.h
src/mac/: py_proc.h  py_thread.h
src/mach/: py_proc.h
src/python/: abi.h  ceval.h  cframe.h  code.h  frame.h  gc.h  gil.h  iframe.h  interp.h  misc.h  object.h  runtime.h  string.h  symbols.h  thread.h
src/win/: argparse.c  argparse.h  py_proc.c  py_proc.h  py_thread.h
test/: .flake8  .isort.cfg  __init__.py  common.bash  requirements.txt  run.sh  setup.sh  sleepy.py  target.py  target34.py  target_gc.py  target_mp.py  test.bats  test_accuracy.py  test_attach.bats  test_attach.py  test_austinp.bats  test_cli.py  test_error.bats  test_fork.bats  test_fork.py  test_fork_mp.bats  test_gc.bats  test_gc.py  test_kernel.bats  test_mojo.py  test_pipe.bats  test_pipe.py  test_sleepless.bats  test_valgrind.bats  test_valgrind.py  test_where.bats  utils.py
test/bm/: cryptomath_module.py  rabin_miller.py  rsa_key_generator.py
test/cunit/: __init__.py  argparse.py  cache.py  conftest.py  error.py  libaustin.py  stats.py  test_argparse.py  test_cache.py  test_error.py  test_libaustin.py  test_platform.py  test_stats.py
test/functional/: test_attach.py  test_cli.py  test_fork.py  test_gc.py  test_mojo.py  test_pipe.py
test/integrity/: test_accuracy.py  test_valgrind.py
test/libaustin/: frame.c  where.c
test/macos/: test.bats  test_attach.bats  test_error.bats  test_fork.bats  test_fork_mp.bats  test_pipe.bats  test_sleepless.bats  test_valgrind.bats  test_where.bats
test/support/: requirements-uwsgi.txt  test_uwsgi.py
test/support/uwsgi/: app.py
test/targets/: column.py  qualnames.py  recursive.py  sleepy.py  target34.py  target_gc.py  target_mp.py
test/win/: common.bash  test.bats  test_error.bats  test_fork.bats  test_fork_mp.bats  test_where.bats
utils/: mojo2austin.py  resolve.py
wix/: Austin.wxs
